--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,187 @@
+@charset "utf-8";
+
+/* RESET */
+html, body, div, span, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, code,
+del, dfn, em, img, q, dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+}
+
+em {
+	font-style: italic;
+}
+
+strong {
+	font-weight: bold;
+}
+
+html,
+body {
+	margin:0;
+	padding:0;
+	height:100%;
+}
+/* /END RESET */
+
+/* *** */
+
+/* CLEARFIX */
+.clearfix:after {
+	content: ".";
+	display: block;
+	clear: both;
+	visibility: hidden;
+	line-height: 0;
+	height: 0;
+}
+ 
+.clearfix {
+	display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+	display: block;
+}
+ 
+* html .clearfix {
+	height: 1%;
+}
+/* /END CLEARFIX */
+
+/* *** */
+
+/* Site color variables */
+
+:root {
+  --color-p: peachpuff;
+  --color-b: rgb(0, 0, 0);
+  --color-w: #fff;
+  --color-r: rgb(255, 0, 0);
+  --color-y: rgb(245, 245, 9);
+  --color-g: rgb(12, 236, 12);
+  --color-b: rgb(9, 9, 245);
+  --color-a: rgb(127, 255, 212);
+  --color-p: rgb(255, 192, 203);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: poppin, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    font-size: 1.25rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+	line-height: 150%;
+	margin: 0 0 10px;
 }
+
+h1, h2, h3, h4, h5, h6 {
+	color: #2E4A74;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+h1 {
+	font-size: 20px;
+	margin: 0 0 15px;
+	font-weight: normal;
+}
+
+h2 {
+	font-size: 18px;
+	margin: 0 0 12px;
+	font-weight: normal;
+}
+
+h3 {
+	font-size: 15px;
+	margin: 0 0 12px;
+	font-weight: normal;
+}
+
+
+h4, h5, h6 {
+	margin: 5px 0 5px;
+	font-weight: bold;
+}
+
+a img {
+	border: none;
+	outline: none;
+}
+
+a {
+	color: #363636;
+	outline: none;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #999;
+}
+
+/* remove dotted lines on some links in FF browser */
+
+a,
+a:active,
+a:visited,
+a img {
+	outline: none;
+}
+
+/* / */
+
+/* 
+=====================================================
+	sections, headers, navs and footer
+===================================================== */
+
+/* navs */
+
+.nav_links {
+	text-decoration: none;
+  }
+
+/* header */
+
+.header {
+  font-size: 6rem;
+  color:blanchedalmond;
+  font-weight: 900;
+}
+
+.holder {
+  margin: 2rem 2rem;
+}
+
+  /* section 1 */
+
+/* section 2 */
+
+/* section 3 */
+
+/* footer */
+
+/* 
+=====================================================
+	Layout & Framework
+===================================================== */
+
+
+
+/* 
+=====================================================
+	Dynamic Displays
+===================================================== */
