--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,12 @@
     --color-a: rgb(127, 255, 212);
     --color-p: rgb(255, 192, 203);
   }
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
   
   @media (prefers-reduced-motion: no-preference) {
     :root {
@@ -314,7 +320,7 @@
 
 .card_header {
   width: 100%;
-  padding-left: 38%;
+  padding-left: 25%;
   padding-top: 25px;
   font-size: 36px;
 }
@@ -326,13 +332,153 @@
   font-size: 18px;
 }
 
-/* Mybrain section */
+/* knowlegde section start */
 
 .mybrain {
-    background: url('./assets/mybrain4.png') no-repeat;
-    height: 100%;
-    width: 100%;
-    background-size: 1500px;
-    background-position-x: center;
-    background-size:auto;
+  position: relative;
+  /* background: radial-gradien(#333,#000) !important; */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;background: url('./assets/mybrain5.png') no-repeat;
+  background-size: 1400px;
+  background-position-x: center;
+  /* background-size:auto; */
+  background-position-y: 25px;
+  overflow:hidden;
+  /* background-color: #141492 */
 }
+
+.mybrain h2 {
+  color: #fff;
+  font-size: 4em;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-shadow: 5px 5px #0000007d;
+}
+
+.mybrain .set {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  pointer-events:none;
+}
+
+.mybrain .set div {
+  position: absolute;
+  display: block;
+}
+
+.mybrain .set div:nth-child(1) {
+  top: 20%;
+  animation: animate 10s linear infinite;
+  animation-delay: -7s;
+}
+
+.mybrain .set div:nth-child(2) {
+  top: 40%;
+  animation: animate 12s linear infinite;
+  animation-delay: -8s;
+}
+
+.mybrain .set div:nth-child(3) {
+  top: 60%;
+  animation: animate 10s linear infinite;
+  animation-delay: 0s;
+}
+
+.mybrain .set div:nth-child(4) {
+  top: 5%;
+  animation: animate 10s linear infinite;
+  animation-delay: -5s;
+}
+
+.mybrain .set div:nth-child(5) {
+  top: 70%;
+  animation: animate 10s linear infinite;
+  animation-delay: -7s;
+}
+
+.mybrain .set div:nth-child(6) {
+  top: 60%;
+  animation: animate 10s linear infinite;
+  animation-delay: -4s;
+}
+
+.mybrain .set div:nth-child(7) {
+  top: 70%;
+  animation: animate 0s linear infinite;
+  animation-delay: -2s;
+}
+
+.mybrain .set div:nth-child(8) {
+  top: 70%;
+  animation: animate  0s linear infinite;
+  animation-delay: -6s;
+}
+
+@keyframes animate 
+{
+  0%
+  {
+    opacity: 0;
+    left: -10%;
+    transform: translateY(-20px) rotate(0deg);
+  }
+  10%
+  {
+    opacity: 0;
+    transform: translateX(-20px) rotate(15deg);
+  }
+  20%
+  {
+    transform: translateX(-20px) rotate(45deg);
+  }
+  40%
+  {
+    opacity: 1;
+    transform: translateX(-20px) rotate(90deg);
+  }
+  60%
+  {
+    opacity: 1;
+    transform: translateX(-20px) rotate(135deg);
+  }
+  80%
+  {
+    transform: translateX(-20px) rotate(180deg);
+  }
+  80%
+  {
+    opacity: 1;
+    transform: translateX(-20px) ro
+    tate(195deg);
+  }
+  90%
+  {
+    
+  }
+  100%
+  {
+    opacity: 0;
+    left: 80%;
+    transform: translateY(-20px) rotate(225deg);
+  }
+}
+
+.set2 {
+  transform: translateY(-80px) scale(0.7) rotateY(180deg);
+}
+
+.bringfowardone {
+  z-index: 1;
+}
+
+.text-orange {
+  color: rgb(215, 155, 186) !important;
+}
+
+/* knowlegde section end */
