--- a/src/styles.css
+++ b/src/styles.css
@@ -121,6 +121,8 @@ a.cleanlinks:hover {
 .projects_container-lg,
 .projects_container-md,
 .projects_container-sm {
+  display: flex;
+  justify-content: center;
   padding-right: var(--bs-gutter-x, 5rem);
   padding-left: var(--bs-gutter-x, 5rem);
   margin-right: auto;
@@ -154,11 +156,11 @@ a.cleanlinks:hover {
   width: 48%;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
   .hero_info_container {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
   }
 }
 
@@ -170,20 +172,15 @@ a.cleanlinks:hover {
   margin-bottom: auto;
 }
 
-@media (max-width: 1024px) {
-  .hero_img_container img{
-    display:block;
-    width: 400px;
-    margin-left: auto;
-    margin-right: 0px;
-    margin-bottom: auto;
+@media (max-width: 768px) {
+  .hero_img_container {
+    display: none;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .hero_img_container img{
-    display:block;
-    width: 0px;
+    width: 400px;
   }
 }
 
@@ -192,6 +189,14 @@ a.cleanlinks:hover {
   flex-direction: row;
   padding-top: 8rem;
   margin-bottom: 100px;
+}
+
+@media (max-width: 768px) {
+  .hero_content_container {
+    display: flex;
+    height: auto;
+    width: 100%;
+  }
 }
 
 .hero_title {
@@ -285,7 +290,7 @@ a.cleanlinks:hover {
   margin-bottom: 150px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .project_card_container {
     position: relative;
     display: flex;
@@ -384,17 +389,16 @@ a.cleanlinks:hover {
 }
 
 .card_header {
+  text-align: center;
   width: 100%;
-  padding-left: 25%;
-  padding-top: 25px;
   font-size: 36px;
+  padding-top: 25px;
 }
 
-@media( max-width:1024px) {
+@media( max-width:768px) {
   .card_header {
+    text-align: center;
     width: 100%;
-    padding-left: 13%;
-    padding-right: auto;
     font-size: 32px;
   }
 }
@@ -631,4 +635,58 @@ a.cleanlinks:hover {
   font-size: 1.5rem;
 }
 
+.profilepic {
+  max-width: 350px;
+}
+
 /* About section end */
+
+/* Start of catact form */
+
+.contactcardholder {
+  position: relative;
+  display: flex;
+  margin-top: 3rem;
+}
+
+.contactcard {
+  width: 28rem;
+  background: #4f95ff;
+  border-radius: 0.3rem;
+  padding: 0.5rem 1rem;
+  margin-right: auto;
+  margin-left: auto;
+  color: white;
+}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.formcontainer {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+/* End of contact form */
