--- a/src/styles.css
+++ b/src/styles.css
@@ -860,7 +860,7 @@ textarea {
   .about-outside {
     position: relative;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     justify-content: center;
     gap: 5rem;
