--- a/src/styles.css
+++ b/src/styles.css
@@ -222,7 +222,7 @@ a.cleanlinks:hover {
 .hero_content_container {
   display: flex;
   flex-direction: row;
-  padding-top: 8rem;
+  padding-top: 6rem;
   margin-bottom: 100px;
 }
 
@@ -427,6 +427,7 @@ a.cleanlinks:hover {
   text-align: center;
   width: 100%;
   font-size: 36px;
+  font-weight: bold;
   padding-top: 25px;
 }
 
