--- a/src/styles.css
+++ b/src/styles.css
@@ -622,7 +622,7 @@ a.cleanlinks:hover {
 }
 
 .text-orange {
-  color: rgb(215, 155, 186) !important;
+  color: #ce916c !important;
 }
 
 /* knowlegde section end */
