--- a/src/typing_effect.css
+++ b/src/typing_effect.css
@@ -1,52 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
 
-.wrapper{
-  display: flex;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
-.wrapper .static-txt{
-  color: #fff;
-  font-size: 60px;
-  font-weight: bold;
+
+body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #37305c;
 }
-.wrapper .dynamic-txts{
-  margin-left: 15px;
-  height: 90px;
-  /* line-height: 90px; */
-  overflow: hidden;
+
+.wrapper {
+    display: flex;
 }
-.dynamic-txts li{
-  list-style: none;
-  color: #ce916c;
-  font-size: 60px;
-  font-weight: bold;
-  position: relative;
-  top: 0;
-  animation: slide 12s steps(4) infinite;
+
+.wrapper .static-txt {
+    color: #fff;
+    font-size: 60px;
+    font-weight: 700;
 }
+
+.wrapper .dynamic-txt {
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    overflow: hidden;
+}
+
+.dynamic-txt li {
+    position: relative;
+}
+
+.dynamic-txt li {
+    list-style: none;
+    color: #ce916c;
+    font-size: 60px;
+    font-weight: 700;
+    top: 0;
+    position: relative;
+    animation: slide 12s steps(4) infinite;
+}
+
 @keyframes slide {
-  100%{
-    top: -360px;
-  }
+    100% {
+        top: -360px;
+    }
 }
-.dynamic-txts li span{
-  position: relative;
-  margin: 0;
-  /* line-height: 90px; */
-}
-.dynamic-txts li span::after{
-  content: "";
-  position: absolute;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background: #37305c;
-  border-left: 1px solid #ce916c;
-  animation: typing 3s steps(10) infinite;
-}
-@keyframes typing {
-  40%, 60%{
-    left: calc(100% + 1px);
-  }
-  100%{
+
+.dynamic-txt li::after {
+    content: "";
+    position: absolute;
     left: 0;
-  }
+    height: 100%;
+    width: 100%;
+    background-color: #37305c;
+    border-left: 2px solid #ce916c;
+    animation: typing 3s steps(10) infinite;
+}
+
+@keyframes typing {
+    40%,
+    60% {
+        left: calc(100% + 30px)
+    }
+    100% {
+        left: 0;
+    }
 }
