--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+	text-align: left;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -401,6 +402,7 @@ a.cleanlinks:hover {
 
 .project_card_button {
   border-radius: 8px;
+  font-size: 1.2rem;
   margin-top: 20px;
   padding-left: 25px;
   padding-right: 25px;
