button text centering

--- a/src/styles.css
+++ b/src/styles.css
@@ -886,5 +886,8 @@ textarea {
 }
 
 .form_submit_btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 2rem;
 }
